--- a/theme/static/css/main.css
+++ b/theme/static/css/main.css
@@ -27,7 +27,7 @@ p {
 
 b, strong {
     color: #333;
-    font-weight: bold
+    font-weight: bold,
 }
 
 a {
@@ -37,7 +37,6 @@ a {
 
 a:hover {
     text-decoration: none;
-    , color: #999;
     border-bottom: 1px dotted;
 }
 
@@ -70,19 +69,15 @@ h6 {
 }
 
 h1, h2, h3, h4, h5, h6 {
+    /*line-height: 1em;*/
     margin-top: 1.2em;
     margin-bottom: 0.9em;
     color: #c5000b;
 }
 
-h1 .subtitle,
-h2 .subtitle,
-h3 .subtitle,
-h4 .subtitle,
-h5 .subtitle,
-h6 .subtitle,
 time {
     color: #888;
+    font-style: normal;
     font-size: 0.7em;
     font-family: monospace, monospace;
     font-variant-numeric: slashed-zero diagonal-fractions;
@@ -92,7 +87,11 @@ time {
 }   
 
 .title {
-    margin-bottom: 3em;
+    margin-bottom: 5em;
+}
+
+.title h1 {
+    margin-bottom: 0.5em;
 }
 
 
@@ -243,6 +242,8 @@ table, thead, tbody, td, th, tr {
 }
 
 .link-box {
+    display: inline-block;
+    line-height: 1em;
     font-size: 0.7em;
     text-transform: uppercase;
     padding: 0.5em;
@@ -260,6 +261,17 @@ table, thead, tbody, td, th, tr {
     border-color: #c5000b;
     color: #ffffff;
     border: 1px solid;
+}
+
+.link-no-box {
+    font-size: 0.7em;
+    color: #c5000b;
+    border-bottom: none;
+    text-transform: uppercase;
+    letter-spacing: 0.2em;
+    padding: 0.5em;
+    font-family: monospace, monospace;
+    font-variant-numeric: slashed-zero diagonal-fractions;
 }
 
 .paginator {
