--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -15,6 +15,10 @@
 {% block content %}
 {% endblock %}
 <footer>
+{% for nm, url in LINKS %}
+<a class="link-no-box" href="{{ url }}">{{ nm }}</a>
+{% endfor %}
+<br>
 <a href="{{ SITEURL }}/">{{ SITENAME }}</a> was built using <a href="http://docs.getpelican.com/en/stable/">Pelican</a>. Original articles on this site are CC <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode">BY-NC-SA</a> licensed unless otherwise stated.
 </footer>
 </body>
