--- a/theme/templates/archives.html
+++ b/theme/templates/archives.html
@@ -1,27 +1,27 @@
 {% extends "base.html" %}
+{% block title %}Archives and Tags | {{ super() }}{% endblock %}
 {% block content %}
 <article>
-    <h1>Archives and tags</h1>
+<h1>Archives and Tags</h1>
+<div>
+{% for t, articles in tags %}
+    <a href="{{ SITEURL }}/{{ t.url }}" class="link-box">{{ t }} ({{ articles | length }})</a>
+{% endfor %}
+</div>
 
-    <div>
-    {% for t, articles in tags %}
-        <a href="{{ SITEURL }}/{{ t.url }}" class="link-box">{{ t }} ({{ articles | length }})</a>
-    {% endfor %}
-    </div>
-
-    <ul class="archive-list">
-    {% for article in articles %}
-    <li>
-        <a float="left" href='/{{ article.url }}'>{{ article.title }}</a>
-        <span>
-            <small>
-                <time datetime="{{ article.date.isoformat() }}">
-                {{ article.date.strftime('%B %d, %Y') }}
-                </time>
-            </small>
-        </span>
-    </li>
-    {% endfor %}
+<ul class="archive-list">
+{% for article in articles %}
+<li>
+    <a float="left" href='/{{ article.url }}'>{{ article.title }}</a>
+    <span>
+        <small>
+            <time datetime="{{ article.date.isoformat() }}">
+            {{ article.date.strftime('%B %d, %Y') }}
+            </time>
+        </small>
+    </span>
+</li>
+{% endfor %}
     </ul>
 </article>
 {% endblock %}
