add disqus, analytics

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -21,5 +21,6 @@
 <br>
 <a href="{{ SITEURL }}/">{{ SITENAME }}</a> was built using <a href="http://docs.getpelican.com/en/stable/">Pelican</a>. Original articles on this site are CC <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/legalcode">BY-NC-SA</a> licensed unless otherwise stated.
 </footer>
+{% include '_includes/ganalytics.html' %}
 </body>
 </html>
