--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -9,7 +9,7 @@
     <title>{% block title %}{{ SITENAME }}{%endblock%}</title>
     <link rel="stylesheet" type="text/css" href="/theme/css/main.css">
     <link rel="stylesheet" type="text/css" href="/theme/css/monokai.css">
-    <link rel="shortcut icon" type="image/x-icon" href="/theme/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     {%block extra_head %}{% endblock %}
 </head>
 <body>
