--- a/theme/static/css/main.css
+++ b/theme/static/css/main.css
@@ -234,6 +234,19 @@ kbd {
     box-shadow: 0px 2px 2px #aaa;
 }
 
+img, .figure {
+    max-width: 100%;
+    display: block;
+    margin: auto;
+    margin-bottom: 1em;
+    margin-top: 1em;
+}
+
+.figure > img{
+    margin-bottom: 0em;
+    margin-top: 0em;
+}
+
 caption, figcaption, .figure .caption {
     font-size: 0.8em;
     color: #888;
@@ -242,9 +255,6 @@ caption, figcaption, .figure .caption {
     text-align: center;
 }
 
-img {
-    max-width: 100%;
-}
 
 iframe {
     border: 1px dotted #888;
