--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -8,7 +8,7 @@
     <meta name="description" content="{% block description %}{%endblock%}">
     <title>{% block title %}{{ SITENAME }}{%endblock%}</title>
     <link rel="stylesheet" type="text/css" href="/theme/css/main.css">
-    <link rel="stylesheet" type="text/css" href="/theme/css/monokai.css">
+    <link rel="stylesheet" type="text/css" href="/theme/css/syntax-light.css">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     {%block extra_head %}{% endblock %}
 </head>
